--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node -r esm .",
+    "dev": "nodemon -r esm"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,12 @@
   "dependencies": {
     "apollo-server-express": "^3.10.2",
     "bcryptjs": "^2.4.3",
-    "express": "^4.18.1"
+    "consola": "^2.15.3",
+    "dotenv": "^16.0.2",
+    "esm": "^3.2.25",
+    "express": "^4.18.1",
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.1"
   }
 }
