--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node -r esm .",
+    "server": "sudo systemctl start mongod && nodemon -r esm",
     "dev": "nodemon -r esm"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "express": "^4.18.1",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.1"
+    "mongoose": "^6.6.1",
+    "mongoose-paginate-v2": "^1.7.1"
   }
 }
