--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.18.1",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.6.1",
-    "mongoose-paginate-v2": "^1.7.1"
+    "mongoose-paginate-v2": "^1.7.1",
+    "yup": "^0.32.11"
   }
 }
