--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r esm .",
+    "startN": "node -r esm .",
+    "start": "nodemon -r esm .",
     "server": "sudo systemctl start mongod && nodemon -r esm",
     "dev": "nodemon -r esm"
   },
@@ -31,6 +32,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.6.1",
     "mongoose-paginate-v2": "^1.7.1",
+    "nodemon": "^2.0.20",
     "yup": "^0.32.11"
   }
 }
