--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r esm .",
-    "server": "sudo systemctl start mongod && nodemon -r esm",
-    "dev": "nodemon -r esm"
+    "start": "nodemon index.js",
+    "server": "sudo systemctl start mongod && nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -24,12 +25,11 @@
     "bcryptjs": "^2.4.3",
     "consola": "^2.15.3",
     "dotenv": "^16.0.2",
-    "esm": "^3.2.25",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.6.1",
+    "mongoose": "^6.6.5",
     "mongoose-paginate-v2": "^1.7.1",
     "nodemon": "^2.0.20",
     "yup": "^0.32.11"
